--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "main": "./build/index.js",
   "scripts": {
     "build": "rollup -c",
+    "storybook": "start-storybook -p 9009 -s public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-image": "^2.0.5",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@storybook/react": "^5.3.18",
     "@types/react": "^16.9.35",
+    "babel-loader": "^8.1.0",
+    "babel-preset-react-app": "^9.1.2",
+    "node-sass": "^4.14.1",
     "rollup": "^2.10.2",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-typescript2": "^0.27.1",
-    "typescript": "^3.9.2",
-    "node-sass": "^4.14.1"
+    "sass-loader": "^8.0.2",
+    "typescript": "^3.9.2"
   },
   "peerDependencies": {
     "react": "^16.13.1",
