--- a/project/package.json
+++ b/project/package.json
@@ -13,7 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "ts-rollup-storybook-system": "^1.0.13",
+    "ts-rollup-storybook-system": "^1.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.10",
+    "classnames": "^2.2.6"
   }
 }
